kubernetes/mongo-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-admin-deployment
  labels:
    app: mongo-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-admin
  template:
    metadata:
      labels:
        app: mongo-admin
    spec:
      containers:
      - name: mongo-admin
        image: mrvautin/adminmongo
        ports:
        - containerPort: 1234
        resources: {}
