kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mongo-deployment
  labels:
    app: todo-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-mongo
  template:
    metadata:
      labels:
        app: todo-mongo
    spec:
      containers:
      - name: todo-mongo
        image: todo-mongo:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: mongodata
      volumes:
      - name: mongodata
        persistentVolumeClaim:
          claimName: mongodata
status: {}
