kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-auth
spec:
  selector:
    app: todo-auth
  ports:
    - port: 3000
      targetPort: 3000
