kubernetes/mongo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: todo-mongo
spec:
  selector:
    app: todo-mongo
  ports:
    - port: 27017
      targetPort: 27017
